--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,15 +4,22 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup",
+    "build": "tailwindcss -i ./src/styles.css -o dist/index.css",
     "dev": "tsup --watch",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "lint": "eslint src/",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
     "@types/react": "^18.2.46",
     "@types/react-native": "^0.73.0",
-    "@repo/typescript-config": "*",
     "tsup": "^8.0.1",
+    "@repo/eslint-config": "*",
+    "@repo/tailwind-config": "*",
+    "@repo/typescript-config": "*",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
