--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,6 +21,11 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "babel-plugin-react-native-web": "^0.19.10",
+    "autoprefixer": "^10.4.16",
+    "@repo/eslint-config": "*",
+    "postcss": "^8.4.33",
+    "@repo/tailwind-config": "*",
+    "tailwindcss": "^3.4.0",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
     "typescript": "^5.3.3"
