--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "turbo lint",
     "type-check": "turbo type-check",
     "clean": "turbo run clean && rm -rf node_modules",
-    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore"
+    "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\" --ignore-path .gitignore",
+    "db:studio": "turbo run db:studio",
+    "db:generate": "turbo run db:generate",
+    "db:gp": "turbo run db:gp"
   },
   "devDependencies": {
     "prettier": "^3.1.1",
