--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,10 +13,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
-    "@repo/ui": "*"
+    "@repo/ui": "*",
+    "@trpc/client": "=10.41.0",
+    "@trpc/react-query": "=10.41.0",
+    "@trpc/server": "=10.41.0",
+    "superjson": "=1.13.1"
   },
   "devDependencies": {
     "@repo/typescript-config": "*",
+    "@repo/server": "*",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
