--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "database",
+  "name": "@repo/database",
   "version": "0.0.0",
   "private": true,
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsc --watch",
-    "build": "tsc",
+    "build": "tsup",
+    "clean": "rm -rf dist",
     "db:studio": "drizzle-kit studio",
     "db:gp": "drizzle-kit generate:mysql --config ./drizzle.config.ts && drizzle-kit push:mysql --config ./drizzle.config.ts",
     "db:generate": "drizzle-kit generate:mysql --config ./drizzle.config.ts"
@@ -13,12 +14,26 @@
   "devDependencies": {
     "drizzle-kit": "0.20.14",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "@repo/typescript-config": "*",
+    "typescript": "^5.2.2",
+    "tsup": "^8.0.1"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
     "drizzle-orm": "0.29.3",
     "@planetscale/database": "1.14.0",
     "mysql2": "^3.6.0"
+  },
+  "exports": {
+    ".": {
+      "types": "./src/index.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    },
+    "./*": {
+      "types": "./src/schema/*/index.ts",
+      "import": "./dist/schema/*/index.js",
+      "require": "./dist/schema/*/index.cjs"
+    }
   }
 }
