--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,30 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-native-web": "^0.19.10",
+    "@clerk/nextjs": "^4.29.9",
     "@repo/ui": "*",
     "@trpc/client": "=10.41.0",
     "@trpc/react-query": "=10.41.0",
     "@trpc/server": "=10.41.0",
+    "next": "^14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native-web": "^0.19.10",
     "superjson": "=1.13.1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "*",
+    "@repo/eslint-config": "*",
     "@repo/server": "*",
+    "@repo/tailwind-config": "*",
+    "@repo/typescript-config": "*",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
-    "babel-plugin-react-native-web": "^0.19.10",
     "autoprefixer": "^10.4.16",
-    "@repo/eslint-config": "*",
-    "postcss": "^8.4.33",
-    "@repo/tailwind-config": "*",
-    "tailwindcss": "^3.4.0",
+    "babel-plugin-react-native-web": "^0.19.10",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
 }
