--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,11 +2,11 @@
   "name": "@repo/database",
   "version": "0.0.0",
   "private": true,
-  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsup",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist && rm -rf node_modules && rm -rf .turbo",
     "db:studio": "drizzle-kit studio",
     "db:gp": "drizzle-kit generate:mysql --config ./drizzle.config.ts && drizzle-kit push:mysql --config ./drizzle.config.ts",
     "db:generate": "drizzle-kit generate:mysql --config ./drizzle.config.ts"
@@ -24,6 +24,10 @@
     "@planetscale/database": "1.14.0",
     "mysql2": "^3.6.0"
   },
+  "files": [
+    "dist",
+    "*.d.ts"
+  ],
   "exports": {
     ".": {
       "types": "./src/index.ts",
