--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tailwindcss -i ./src/styles.css -o dist/index.css",
     "dev": "tsup --watch",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist && rm -rf node_modules && rm -rf .turbo",
     "lint": "eslint src/",
     "type-check": "tsc --noEmit"
   },
