--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,15 +12,21 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.9",
+    "@radix-ui/react-label": "^2.0.2",
     "@repo/ui": "*",
     "@trpc/client": "=10.41.0",
     "@trpc/react-query": "=10.41.0",
     "@trpc/server": "=10.41.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.356.0",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.10",
-    "superjson": "=1.13.1"
+    "superjson": "=1.13.1",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
