--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,8 @@
     "@clerk/nextjs": "^4.29.9",
     "@clerk/themes": "^1.7.9",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@repo/ui": "*",
     "@trpc/client": "=10.41.0",
     "@trpc/react-query": "=10.41.0",
